Properly align locked messaging with correct icon

--- a/app/assets/stylesheets/_locked-content.scss
+++ b/app/assets/stylesheets/_locked-content.scss
@@ -18,3 +18,12 @@
     font-weight: 600;
   }
 }
+
+.product-card-locked .icon {
+  left: 100px;
+  top: 20px;
+}
+
+.upgrade-link {
+  margin-left: 120px;
+}
